// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Snapshots > renders default layout correctly 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.2.3


























Notifications

Composer
"
`;

exports[`App > Snapshots > renders screen reader layout correctly 1`] = `
"Notifications
Footer


  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.2.3

Composer
"
`;

exports[`App > Snapshots > renders with dialogs visible 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.2.3


























Notifications

DialogManager
"
`;

exports[`App > should render ToolConfirmationQueue along with Composer when tool is confirming and experiment is on 1`] = `
"

  ██████╗ ██████╗ ███████╗███╗   ██╗██╗    ██╗ ██████╗ ██████╗ ██╗  ██╗
 ██╔═══██╗██╔══██╗██╔════╝████╗  ██║██║    ██║██╔═══██╗██╔══██╗██║ ██╔╝
 ██║   ██║██████╔╝█████╗  ██╔██╗ ██║██║ █╗ ██║██║   ██║██████╔╝█████╔╝
 ██║   ██║██╔═══╝ ██╔══╝  ██║╚██╗██║██║███╗██║██║   ██║██╔══██╗██╔═██╗
 ╚██████╔╝██║     ███████╗██║ ╚████║╚███╔███╔╝╚██████╔╝██║  ██║██║  ██╗
  ╚═════╝ ╚═╝     ╚══════╝╚═╝  ╚═══╝ ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝

 ✦ AI 알파 TF ✦                                         openwork v1.2.3

HistoryItemDisplay
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                                                  │
│                                                                                                  │
│ ?  ls list directory                                                                             │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ ls                                                                                           │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ Allow execution of [ls]?                                                                         │
│                                                                                                  │
│ ● 1. Allow once                                                                                  │
│   2. Allow for this session                                                                      │
│   3. No, suggest changes (esc)                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯










Notifications

Composer
"
`;
